// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Server addEntries add hot option 1`] = `
Array [
  Array [
    "client",
    "index.js?http:",
    "localhost",
  ],
  Array [
    "node_modules",
    "webpack",
    "hot",
    "dev-server.js",
  ],
  Array [
    "foo.js",
  ],
]
`;

exports[`Server addEntries add hot option 2`] = `
Array [
  HotModuleReplacementPlugin {
    "fullBuildTimeout": 200,
    "multiStep": undefined,
    "options": Object {},
    "requestTimeout": 10000,
  },
]
`;

exports[`Server addEntries add hotOnly option 1`] = `
Array [
  Array [
    "client",
    "index.js?http:",
    "localhost",
  ],
  Array [
    "node_modules",
    "webpack",
    "hot",
    "only-dev-server.js",
  ],
  Array [
    "foo.js",
  ],
]
`;

exports[`Server addEntries add hotOnly option 2`] = `
Array [
  HotModuleReplacementPlugin {
    "fullBuildTimeout": 200,
    "multiStep": undefined,
    "options": Object {},
    "requestTimeout": 10000,
  },
]
`;

exports[`Server stats should works with difference stats values (contains 'hash', 'assets', 'warnings' and 'errors') 1`] = `
Array [
  "errors",
  "warnings",
  "hash",
  "assetsByChunkName",
  "assets",
  "filteredAssets",
]
`;

exports[`Server stats should works with difference stats values (contains 'hash', 'assets', 'warnings' and 'errors') 2`] = `
Array [
  "errors",
  "warnings",
  "hash",
  "assetsByChunkName",
  "assets",
  "filteredAssets",
]
`;

exports[`Server stats should works with difference stats values (contains 'hash', 'assets', 'warnings' and 'errors') 3`] = `
Array [
  "errors",
  "warnings",
  "hash",
  "assetsByChunkName",
  "assets",
  "filteredAssets",
]
`;

exports[`Server stats should works with difference stats values (contains 'hash', 'assets', 'warnings' and 'errors') 4`] = `
Array [
  "errors",
  "warnings",
  "hash",
  "assetsByChunkName",
  "assets",
  "filteredAssets",
]
`;

exports[`Server stats should works with difference stats values (contains 'hash', 'assets', 'warnings' and 'errors') 5`] = `
Array [
  "errors",
  "warnings",
  "hash",
  "assetsByChunkName",
  "assets",
  "filteredAssets",
]
`;
